--- a/app/views/todo_items/index.html.erb
+++ b/app/views/todo_items/index.html.erb
@@ -1,7 +1,11 @@
 <h1><%= @todo_list.title  %></h1>
-<%= link_to "New Todo Item", new_todo_list_todo_item_path %>
+<%= link_to "New Todo Item", new_todo_list_todo_item_path %><br>
+<%= link_to "Back", root_path %>
 <ul class="todo_items">
   <% @todo_list.todo_items.each do |todo_item| %>
-    <li><%= todo_item.content %></li>
+    <li id="<%= dom_id(todo_item) %>">
+      <%= todo_item.content %> | 
+      <%= link_to "Edit", edit_todo_list_todo_item_path(@todo_list, todo_item) %>
+    </li>
   <% end %>
 </ul>
