--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,12 +13,14 @@
  *= require_tree .
  *= require_self
  */
+body {
+  margin:0;
+}
 .flash { 
   padding: 15px;
   border-radius: 3px;
   border: 1px solid;
 }
-
 .flash.success {
   background: #dff0d8;
   border-color: #d6e9c6;
@@ -34,3 +36,70 @@
   background-color: #d9edf7;
   border-color: #bce8f1;
 }
+header {
+  border-bottom: 1px solid #aaa;
+  padding:10px;
+}
+header h1 {
+  float:left;
+}
+header h1 a, 
+header ul li a {
+  text-decoration: none;
+}
+header ul {
+  margin:0;
+  padding:0;
+  float:right;
+  clear:right;
+}
+header ul li {
+  list-style: none;
+  margin-top:17px;
+}
+.clear {
+  clear:both;
+}
+.container {
+  width:960px;
+  margin:0 auto;
+}
+.todo_items {
+  list-style:none;
+  margin:0;
+  padding:0;
+}
+.todo_items li {
+  border:1px solid #e4e4e4;
+  border-radius: 3px;
+  margin-bottom:15px;
+  padding:10px;
+  }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
