--- a/app/views/todo_items/index.html.erb
+++ b/app/views/todo_items/index.html.erb
@@ -1,4 +1,4 @@
-<h1><%= @todo_list.title  %></h1>
+<h1 id="todo_list_title"><%= @todo_list.title  %></h1>
 <%= link_to "New Todo Item", new_todo_list_todo_item_path %><br>
 <%= link_to "Back", root_path %>
 <ul class="todo_items">
@@ -6,7 +6,8 @@
     <li id="<%= dom_id(todo_item) %>">
       <%= todo_item.content %>
       <%= link_to "Edit", edit_todo_list_todo_item_path(@todo_list, todo_item) %> | 
-      <%= link_to 'Delete', todo_list_todo_item_path(todo_item), method: :delete, data: { confirm: 'Are you sure?' }  %>
+      <%= link_to 'Delete', todo_list_todo_item_path(todo_item), method: :delete, data: { confirm: 'Are you sure?' }  %> | 
+      <%= link_to 'Mark Complete', complete_todo_list_todo_item_path(todo_item), method: :patch %>
     </li>
   <% end %>
 </ul>
