mark as complete

--- a/app/views/todo_items/index.html.erb
+++ b/app/views/todo_items/index.html.erb
@@ -5,9 +5,13 @@
   <% @todo_list.todo_items.each do |todo_item| %>
     <li id="<%= dom_id(todo_item) %>">
       <%= todo_item.content %>
+      <%= todo_item.completed_at %>
       <%= link_to "Edit", edit_todo_list_todo_item_path(@todo_list, todo_item) %> | 
       <%= link_to 'Delete', todo_list_todo_item_path(todo_item), method: :delete, data: { confirm: 'Are you sure?' }  %> | 
-      <%= link_to 'Mark Complete', complete_todo_list_todo_item_path(todo_item), method: :patch %>
+      <% if todo_item.completed? %>
+      <% else %>
+        <%= link_to 'Mark Complete', complete_todo_list_todo_item_path(todo_item), method: :patch %>
+      <% end %>
     </li>
   <% end %>
 </ul>
