--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -11,9 +11,14 @@
       <div class="container">
         <h1><%= link_to "Odot", root_path %></h1>
         <ul>
-          <li><%= link_to "Todo Lists", todo_lists_path %></li>
-          <li><%= link_to "Sign Up", new_user_path %></li>
-          <li><%= link_to "Logout", logout_path %></li>
+          <li><%= link_to "Todo Lists", todo_lists_path %></li>          
+          <% if logged_in? %>
+          <li></li>
+            <li><%= link_to "Logout", logout_path, method: :delete %></li>
+          <% else %>
+            <li><%= link_to "Sign Up", new_user_path %></li>
+            <li><%= link_to "Log In", new_user_session_path %></li>
+          <% end %>
         </ul>
         <div class="clear"></div>
       </div>
